# Prometheus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml
notebooks/: models.ipynb  win_prediction.ipynb
prometheus/: __init__.py  main.py  matches.py  players.py  ranking.py  regression.py  types.py  utils.py  win_prediction.py
scripts/: 001_create_tables.sql  002_add_matches.py  003_convert_to_lore_stats.py  003_create_glory.sql  build_site.py  setup_db.sh
site_static/css/: base.css  components.css  responsive.css  table.css  variables.css
site_static/js/: filters.js  main.js  table.js
sites/: style.css
templates/: base.html.j2  index.html.j2  metric.html.j2  metric_dynamic.html.j2  metric_filter.html.j2  team.html.j2
tests/: test_matches.py  test_matches_inmemory.py  test_regression.py  test_team_averages.py
tests/e2e/: test_ranking_e2e.py
tests/integration/: conftest.py  test_matches_integration.py  test_ranking_integration.py
