[project]
name = "prometheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "typer>=0.17.4",
]

[tool.setuptools]
packages = ["prometheus"]
